# 3DModelViewer

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmale-build-multi-platform.yml
Application/: CMakeLists.txt  main.cpp
Assets/: CMakeLists.txt
CMake/: Deploy.cmake
Documentation/: ApplicationRuntimeRoutine.drawio  Attributes.md  Camera.drawio  NodeGraph.drawio  Notes.drawio
Examples/: CMakeLists.txt  DebugScene.cpp  SimpleScene.cpp
Libraries/: CMakeLists.txt
Libraries/Application/: CMakeLists.txt
Libraries/Application/Include/Application/: Application.hpp  Creator.hpp  Modifier.hpp
Libraries/Application/Source/: Application.cpp  Creator.cpp  Modifier.cpp
Libraries/Core/: CMakeLists.txt
Libraries/Core/Include/Core/: Attribute.hpp  Camera.hpp  Command.hpp  CommandManager.hpp  ContentManager.hpp  DataTypes.hpp  EventRegistry.hpp  EventSystem.hpp  Handlers.hpp  Mesh.hpp  Node.hpp  NodeGraph.hpp  NodeRegistry.hpp  NumericAttribute.hpp  Scene.hpp  StObject.hpp  Transform.hpp  TypedAttribute.hpp
Libraries/Core/Include/Core/Commands/: CameraCommands.hpp
Libraries/Core/Include/Core/DataTypes/: Camera.hpp  DataTypes.hpp  Transform.hpp
Libraries/Core/Include/Core/Nodes/: Camera.hpp  CameraNode.hpp  Node.hpp  NodeGraph.hpp  TransformNode.hpp
Libraries/Core/Source/: Attribute.cpp  Camera.cpp  CommandManager.cpp  ContentManager.cpp  EventSystem.cpp  Node.cpp  NodeGraph.cpp  Scene.cpp  StObject.cpp  StObjectPrivate.hpp  Transform.cpp  TypedAttribute.cpp
Libraries/Core/Source/Commands/: CameraCommands.cpp
Libraries/Core/Source/DataTypes/: Camera.cpp
Libraries/Core/Source/Nodes/: Camera.cpp  CameraNode.cpp  NodeGraph.cpp  TransformNode.cpp
Libraries/Geometry/: CMakeLists.txt
Libraries/Geometry/Include/Geometry/: Atribute.hpp  Geometry.hpp  Grid.hpp  Line.hpp  Point3D.hpp  Vertex.hpp
Libraries/Geometry/Include/Geometry/Commands/: PlaneCommands.hpp
Libraries/Geometry/Include/Geometry/DataTypes/: Mesh.hpp
Libraries/Geometry/Include/Geometry/Nodes/: Plane.hpp
Libraries/Geometry/Source/: Geometry.cpp  Grid.cpp  Line.cpp  Point3D.cpp
Libraries/Geometry/Source/Commands/: PlaneCommands.cpp
Libraries/Geometry/Source/DataTypes/: Mesh.cpp
Libraries/Geometry/Source/Nodes/: Plane.cpp
Libraries/Renderer/: CMakeLists.txt
Libraries/Renderer/Include/Renderer/: GraphicsPiplineFactory.hpp  Grid.hpp  Material.hpp  MaterialManager.hpp  Mesh.hpp  Plane.hpp  Renderable.hpp  Renderer.hpp  StandardMaterial.hpp  VulkanContext.hpp
Libraries/Renderer/Include/Renderer/Commands/: MaterialCommands.hpp  RendererCommands.hpp  StandardMaterialCommands.hpp
Libraries/Renderer/Include/Renderer/DataTypes/: Renderable.hpp
Libraries/Renderer/Include/Renderer/Nodes/: StandardMaterial.hpp
Libraries/Renderer/Source/: GraphicsPiplineFactory.cpp  GraphicsPiplineFactory.hpp  Grid.cpp  PhysicalDevice.cpp  PhysicalDevice.hpp  QueueFamily.cpp  QueueFamily.hpp  Renderer.cpp  VisualAidsPipline.hpp
Libraries/Renderer/Source/Commands/: MaterialCommands.cpp  RendererCommands.cpp  StandardMaterialCommands.cpp
Libraries/Renderer/Source/Nodes/: StandardMaterial.cpp
Libraries/Ui/: CMakeLists.txt
Libraries/Ui/Include/Ui/: AttributeEditor.hpp  GuiManager.hpp  MainWindow.hpp  Matrix4Widget.hpp  NodeEditor.hpp  Viewport.hpp
Libraries/Ui/Source/: AttributeEditor.cpp  GuiManager.cpp  MainWindow.cpp  NodeEditor.cpp  Viewport.cpp
Tests/: BuildUnitTests.cmake  CMakeLists.txt
Tests/TestPrograms/: CMakeLists.txt  InputPrototype.cpp  NodeGraph.drawio  NodeGraph.md  NodeGraphPrototype.cpp  NodeGraphPrototype2.cpp  NodeGraphPrototype3.cpp  SimpleScene.cpp
Tests/UnitTests/: CMakeLists.txt
Tests/UnitTests/Core/: AttributesTest.cpp  CMakeLists.txt  CameraTest.cpp  ContentManagerTest.cpp  GraphNodeTest.cpp  NumericAttributeTest.cpp  SceneTest.cpp  TypedAttributeTest.cpp
Tests/UnitTests/Core/Nodes/: AttributesTest.cpp
Tests/UnitTests/Geometry/: CMakeLists.txt  GeometryTest.cpp  GridTests.cpp  MeshTest.cpp  PlaneTest.cpp  Point3DTest.cpp  VertexTest.cpp
Tests/UnitTests/Renderer/: CMakeLists.txt  GraphicsPiplineFactoryTest.cpp  GridTests.cpp
Utility/Prototypes/: Camera.py  CustomLine.py  Graph.py  QtPrototype.py
